[workspace]
members = ["horologe", "horologe-in-memory", "horologe-seaorm"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
uuid = "1.16"

horologe.path = "horologe"
horologe-in-memory.path = "horologe-in-memory"
horologe-seaorm.path = "horologe-seaorm"
