[package]
name = "horologe-seaorm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
horologe.workspace = true
serde_json.workspace = true
tokio.workspace = true

uuid = { workspace = true, features = ["v7"] }
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio",
    "chrono",
] }
