[package]
name = "horologe"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
tokio.workspace = true
uuid.workspace = true

log = "0.4"
dashmap = "6.1.0"

[dev-dependencies]
horologe-in-memory.workspace = true
